--- a/src/index.css
+++ b/src/index.css
@@ -32,47 +32,22 @@ h1 {
   line-height: 1.1;
 }
 
-button {
-  border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
-  cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
+
 button:focus,
 button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
-}
-
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+  outline: 1.5px auto -webkit-focus-ring-color;
+  
 }
 
 .cropped-area {
-  border: 1px dashed black;
+  outline: 3px dashed rgb(255, 255, 255);
   position: absolute;
   top: 0px;
   left: 0px;
   width: 100px;
   height: 100px;
   z-index: 100;
-  box-shadow: 0 0 2000px 2000px rgb(0 0 0 / 30%);
+  box-shadow: 0 0 2000px 2000px rgb(0 0 0 / 35%);
   touch-action: none;
   cursor: move;
 }
@@ -83,7 +58,6 @@ button:focus-visible {
   right: -4px;
   width: 10px;
   height: 10px;
-  background-color: #0097df;
   cursor: nwse-resize;
   touch-action: none;
 }
